AiPS1/Naloga1/log/r18/compile.out
Naloga1.java:19: error: cannot find symbol
                izvajanje(ukazi);
                          ^
  symbol:   variable ukazi
  location: class Naloga1
1 error
